--- a/os.css
+++ b/os.css
@@ -1,10 +1,14 @@
 body {margin:0px;padding:0px}
 
-.appwindow {background-color:#ffffff;margin:0px;padding:0px;position:fixed;}
+.appwindow.active {background-color:#ffffff;margin:0px;padding:0px;position:fixed;}
+.appwindow:not(.active) {opacity:0.8;background-color:#ffffff;margin:0px;padding:0px;position:fixed;}
 
 
 
-.appwindow .titlebar {margin:0px;padding:0px;background-color:#000000;color#ffffff;height:21px;position:absolute;left:0px;right:0px;top:0px;}
+.appwindow.active .titlebar {margin:0px;padding:0px;background-color:#000000;color#ffffff;height:21px;position:absolute;left:0px;right:0px;top:0px;}
+.appwindow:not(.active) .titlebar {margin:0px;padding:0px;background-color:#c0c0c0;color#ffffff;height:21px;position:absolute;left:0px;right:0px;top:0px;}
+
+
 
 .appwindow .content {margin:0px;padding:0px;background-color:#ffffff;color#000000;height:21px;position:absolute;left:0px;right:0px;top:21px;bottom:0px;}
 
@@ -17,3 +21,4 @@ body {margin:0px;padding:0px}
 .desktop .nav .icon {z-index:6;margin:0px;padding:0px;position:fixed;right:0px;top:0px;margin:0px;padding:0px;width:40px;height:40px;}
 
 .desktop .startmenu {z-index:7;margin:0px;padding:0px;position:fixed;top:0px;bottom:0px;left:0px;margin:0px;padding:0px;right:40px;}
+
