--- a/os.css
+++ b/os.css
@@ -16,7 +16,7 @@ body {margin:0px;padding:0px}
 
 .desktop {margin:0px;padding:0px;}
 
-.desktop .nav {z-index:5;margin:0px;padding:0px;position:fixed;right:0px;top:0px;bottom:0px;margin:0px;padding:0px;width:30px;}
+.desktop .nav {color:#ffffff;z-index:5;margin:0px;padding:0px;position:fixed;right:0px;top:0px;bottom:0px;margin:0px;padding:0px;width:30px;background-color:rgba(0,0,0,.7);}
 
 .desktop .nav .icon {z-index:6;margin:0px;padding:0px;position:fixed;right:0px;top:0px;margin:0px;padding:0px;width:40px;height:40px;}
 
