--- a/os.css
+++ b/os.css
@@ -8,6 +8,14 @@ body {margin:0px;padding:0px}
 .appwindow.active .titlebar {text-align:left;margin:0px;padding:0px;background-color:#000000;color:#ffffff;height:21px;position:absolute;left:0px;right:0px;top:0px;}
 .appwindow:not(.active) .titlebar {margin:0px;padding:0px;background-color:#c0c0c0;color:#ffffff;height:21px;position:absolute;left:0px;right:0px;top:0px;}
 
+.appwindow.active .titlebar .closeButton {color:#ffffff;background-color:#ff0000;border:0px none;
+  border-radius:100%;
+  -webkit-border-radius:100%;
+  -o-border-radius:100%;
+  -moz-border-radius:100%;
+  -ms-border-radius:100%;
+
+}
 
 
 .appwindow .content {margin:0px;padding:0px;background-color:#ffffff;color#000000;height:21px;position:absolute;left:0px;right:0px;top:21px;bottom:0px;}
