--- a/os.css
+++ b/os.css
@@ -8,13 +8,18 @@ body {margin:0px;padding:0px}
 .appwindow.active .titlebar {text-align:left;margin:0px;padding:0px;background-color:#000000;color:#ffffff;height:21px;position:absolute;left:0px;right:0px;top:0px;}
 .appwindow:not(.active) .titlebar {margin:0px;padding:0px;background-color:#c0c0c0;color:#ffffff;height:21px;position:absolute;left:0px;right:0px;top:0px;}
 
-.appwindow.active .titlebar .closeButton {color:#ffffff;background-color:#ff0000;border:0px none;
-  border-radius:100%;
-  -webkit-border-radius:100%;
-  -o-border-radius:100%;
-  -moz-border-radius:100%;
-  -ms-border-radius:100%;
-
+.appwindow.active .titlebar .closeButton {
+  
+  color:#ffffff;background-color:#ff0000;border:0px none;
+  border-radius:1em;
+  -webkit-border-radius:1em;
+  -o-border-radius:1em;
+  -moz-border-radius:1em;
+  -ms-border-radius:1em;
+  width:21px;
+  margin:0px;
+  padding:0px;
+  
 }
 
 
